Version 5.1.3.11
Added exn:fail:syntax:unbound
Added date*, which extends date to include nanoseconds and a 
 time zone name
Changed seconds->date to accept a real number return a date*

Version 5.1.3.10
Added variable-reference->module-declare-inspector, which allows
 a macro or other syntax tool to get the enclosing module's
 declaration-time inspector for taint operations
Removed the Racket-to-C compiler: raco ctool -e/-c, mzc -e/-c,
 compile-extensions, compile-extensions-to-c, compile-c-extensions,
 compiler/cffi, compiler/comp-unit,  compiler:inner^, and most 
 options in compiler/option
 
Version 5.1.3.9
Add syntax-shift-phase-level
errortrace: with-mark and make-st-mark now take a phase level
place:place* and dynamic place* forms now take in, out, and err named
 arguments which become the standard io ports for the new place

Version 5.1.3.8
Add syntax-transforming-module-expression? and
 variable-reference->module-base-phase

Version 5.1.3.7
Generalized begin-with-syntax to allow phase-N definitions,
 both variable and syntax, within a module for all N >= 0;
 removed define-values-for-syntax from fully expanded forms;
 added begin-with-syntax to fully expanded forms
Changed syntax-local-module-defined-identifiers to return
 a table for all phases instead of just two values
compiler/zo-structs: removed def-for-syntax, added
 seq-for-syntax, changed some mod fields, added field to
 def-syntaxes

Version 5.1.3.6
unsafe/ffi:Changed cstructs to not be generative. 
place:cpointers and file descriptors can now be sent across
 place channels.

Version 5.1.3.4
Add support for the collection links file, including
 (find-system-path 'links-file) and the raco link command

Version 5.1.3.3
unsafe/ffi: added support for C arrays and unions
Fixed the planet module-name-resolver to be thread safe
mrlib/include-bitmap: Adjust include-bitmap so it does not 
 write to the filesystem
framework: the finder get-file & put-file dialogs no 
 longer normalize their results